# ai-desktop-todp

./: .env.example  .gitignore  README.md  package.json  tsconfig.base.json
apps/ai-service/: alembic.ini  package.json  pyproject.toml
apps/ai-service/alembic/: env.py
apps/ai-service/app/: main.py
apps/ai-service/app/core/: config.py  errors.py
apps/ai-service/app/schemas/: prompt.py
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs  mod.rs
apps/desktop/src-tauri/src/commands/: mod.rs
apps/desktop/src-tauri/src/desktop/: mod.rs
apps/desktop/src-tauri/src/platform/: mod.rs
apps/desktop/src-tauri/src/services/: mod.rs
apps/desktop/src-tauri/src/shortcuts/: mod.rs
apps/desktop/src-tauri/src/tray/: mod.rs
apps/desktop/src-tauri/src/windows/: mod.rs
apps/desktop/src/app/router/: index.tsx
apps/desktop/src/pages/: HomePage.tsx
apps/desktop/src/shared/ui/: styles.css
apps/desktop/src/widgets/DesktopGrid/: index.tsx
