[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-service"
version = "0.1.0"
description = "AI orchestration service for AI Desktop Todo"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic>=2",
  "sqlalchemy>=2",
  "httpx",
  "alembic",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
